<resources>
    <string name="app_name">HomeWork</string>
    <string name="hello">Hello</string>
    <string name="world">World</string>
    <string name="button">Button</string>
    <string name="dz00">00</string>
    <string name="dz01">01</string>
    <string name="dz02c">02c</string>
    <string name="dz02h">02h</string>
    <string name="dz03">03</string>
    <string name="dz04">04</string>
    <string name="dz05f">05f</string>
    <string name="dz05s">05s</string>
    <string name="dz06">06</string>
    <string name="dz08">08</string>
    <string name="dz09">09</string>
    <string name="dz11s">11s</string>
    <string name="dz11c">11c</string>
    <string name="dz12">12</string>
    <string name="dz13c">13c</string>
    <string name="dz13t">13t</string>
    <string name="dz15">15</string>
    <string name="austriaFlag">Austria Flag</string>
    <string name="polandFlag">Poland Flag</string>
    <string name="italyFlag">Italy Flag</string>
    <string name="columbiaFlag">Columbia Flag</string>
    <string name="madagascarFlag">Madagascar Flag</string>
    <string name="thailandFlag">Thailand Flag</string>
    <string name="denmarkFlag">Denmark Flag</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="forgot_username_password"><u>Forgot your username/password</u></string>
    <string name="show_me_the_picture">Show me the picture</string>
    <string name="enter_the_link">Enter the link</string>
    <string name="sorry">Sorry, load was failed\nYou can try with test link</string>
    <string name="link">http://developer.alexanderklimov.ru/android/images/android_cat.jpg</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal Code</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="phone">Phone</string>
    <string name="name_value">Nial Brockman</string>
    <string name="country_value">USA</string>
    <string name="postal_code_value">60604</string>
    <string name="date_of_birth_value">Feb. 21, 2000</string>
    <string name="gender_value">Male</string>
    <string name="height_value">6\'1"</string>
    <string name="phone_value">(781) 547–3320</string>
    <string name="n4">4</string>
    <string name="n54">54</string>
    <string name="n12">12</string>
    <string name="trophies">Trophies</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="dz3_string">Dylan Conner</string>
    <string name="create_random_pie_chart">Create Random Pie Chart</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="url_image">Url Image</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="incorrect_link">Incorrect Link</string>
    <string name="empty_name_field">Empty Name Field</string>
    <string name="incorrect_number">Incorrect Number</string>
    <string name="sorry2">Sorry, Something Went Wrong.</string>
    <string name="incorrect_information">Sorry, Incorrect Information</string>
</resources>
