<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom|start"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_notifications_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:background="@drawable/dz3_shape"
                android:padding="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/monda_bold"
                android:text="@string/dz3_string"
                android:textColor="@color/white"
                android:textSize="26sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/Dz3TextView3"
                android:text="@string/trophies" />

            <TextView
                style="@style/Dz3TextView3"
                android:text="@string/following" />

            <TextView
                style="@style/Dz3TextView3"
                android:text="@string/followers" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/Dz3TextView2"
                android:text="@string/n4" />

            <TextView
                style="@style/Dz3TextView2"
                android:text="@string/n54" />

            <TextView
                style="@style/Dz3TextView2"
                android:text="@string/n12" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout style="@style/Dz3LinerLayout">

            <TextView
                style="@style/Dz3TextView"
                android:text="@string/name" />

            <TextView
                style="@style/Dz3ValueTextView"
                android:text="@string/name_value" />
        </LinearLayout>

        <LinearLayout style="@style/Dz3LinerLayout">

            <TextView
                style="@style/Dz3TextView"
                android:text="@string/country" />

            <TextView
                style="@style/Dz3ValueTextView"
                android:text="@string/country_value" />
        </LinearLayout>

        <LinearLayout style="@style/Dz3LinerLayout">

            <TextView
                style="@style/Dz3TextView"
                android:text="@string/postal_code" />

            <TextView
                style="@style/Dz3ValueTextView"
                android:text="@string/postal_code_value" />
        </LinearLayout>

        <LinearLayout style="@style/Dz3LinerLayout">

            <TextView
                style="@style/Dz3TextView"
                android:text="@string/date_of_birth" />

            <TextView
                style="@style/Dz3ValueTextView"
                android:text="@string/date_of_birth_value" />
        </LinearLayout>

        <LinearLayout style="@style/Dz3LinerLayout">

            <TextView
                style="@style/Dz3TextView"
                android:text="@string/gender" />

            <TextView
                style="@style/Dz3ValueTextView"
                android:text="@string/gender_value" />
        </LinearLayout>

        <LinearLayout style="@style/Dz3LinerLayout">

            <TextView
                style="@style/Dz3TextView"
                android:text="@string/height" />

            <TextView
                style="@style/Dz3ValueTextView"
                android:text="@string/height_value" />
        </LinearLayout>

        <LinearLayout style="@style/Dz3LinerLayout">

            <TextView
                style="@style/Dz3TextView"
                android:text="@string/phone" />

            <TextView
                style="@style/Dz3ValueTextView"
                android:text="@string/phone_value" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />
</LinearLayout>