<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <EditText
            android:id="@+id/dz8urlEditText"
            style="@style/Dz6EditText"
            android:hint="@string/url_image"
            android:imeOptions="actionNext"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/dz8nameEditText"
            style="@style/Dz6EditText"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/dz8ageEditText"
            style="@style/Dz6EditText"
            android:hint="@string/age"
            android:imeOptions="actionDone"
            android:inputType="number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/dz8saveButton"
            style="@style/Dz6Button"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/yellow"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>