<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/login_logo" />

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:drawableStart="@drawable/ic_login_name"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_login_password"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/logInButton"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="26dp"
            android:background="@color/logInButton"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/forgotButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:text="@string/forgot_username_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/createAccount"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="26dp"
            android:background="@color/createAccountButton"
            android:text="@string/create_account" />
    </LinearLayout>
</FrameLayout>