<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/austriaFlag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/austriaFlag"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@color/red"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="3">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/polandFlag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/polandFlag"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@color/red"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/italyFlag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/italyFlag"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@color/red"
            android:orientation="horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/green" />

            <View
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/columbiaFlag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/columbiaFlag"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@color/red"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/yellow" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/blue" />

        </LinearLayout>

        <TextView
            android:id="@+id/madagascarFlag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/madagascarFlag"
            android:textSize="40sp" />

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@color/green">

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/red" />

            <View
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

        </FrameLayout>

        <TextView
            android:id="@+id/thailandFlag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thailandFlag"
            android:textSize="40sp" />

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@color/red">

            <View
                android:layout_width="match_parent"
                android:layout_height="133dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_gravity="center_vertical"
                android:background="@color/blue" />

        </FrameLayout>

        <TextView
            android:id="@+id/denmarkFlag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/denmarkFlag"
            android:textSize="40sp" />

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@color/white">

            <View
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@color/red" />

            <View
                android:layout_width="186dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@color/red" />

            <View
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>